tests/testcases/invalid/semantic/52_incomplete_variable_declaration.ciel
// Test: Incomplete type used in variable declaration
// Expected: Error - incomplete type cannot be used for variable declaration

struct ForwardDeclaredStruct;

struct ForwardDeclaredStruct incomplete_var;
